[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id=1]

[node name="PauseMenu" type="Control"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -180.0
offset_right = 220.0
offset_bottom = 180.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0

[node name="Title" type="Label" parent="Panel/VBox"]
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBox"]
text = "Resume"

[node name="RestartButton" type="Button" parent="Panel/VBox"]
text = "Restart"

[node name="MenuButton" type="Button" parent="Panel/VBox"]
text = "Main Menu"
